# Checkers_sfml

./: .gitignore  CMakeLists.txt  README.md  main.cpp
AppController/: AppController.cpp  AppController.h
AppModel/: AppModel.cpp  AppModel.h
AppModel/Board/: Board.cpp  Board.h
AppModel/BotManager/: BotManager.cpp  BotManager.h
AppModel/BotManager/Bot/: IBot.cpp  IBot.h
AppModel/BotManager/Bot/BotBeginner/: BotBeginner.cpp  BotBeginner.h
AppModel/BotManager/Bot/BotGrandmaster/: BotGrandmaster.cpp  BotGrandmaster.h
AppModel/BotManager/Bot/BotRand/: BotRand.cpp  BotRand.h
AppModel/Piece/: Piece.cpp  Piece.h
AppRender/: AppRender.cpp  AppRender.h
Assets/: Assets.cpp  Assets.h
